fixed video for iphone and better watching spacing

--- a/css/uquIndex.css
+++ b/css/uquIndex.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
   
 .card {    
@@ -14,6 +18,10 @@
     overflow: hidden;
     padding: 15px;
     transition: height 0.5s ease-in-out;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
   
 .card.active {
